public/assets/carousel/css/carousel.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body, html {
    height: 100%;
    overflow: hidden;
}

.carousel {
    position: relative;
    height: 100vh;
    width: 100vw;
    overflow: hidden;
}

#backgroundcontainer {
    position: absolute;
    inset: 0;
    background-position: center;
    background-size: cover;
    

    transition: background-size 0.5s ease, filter 0.5s ease;
    z-index: -1;
    filter: blur(10px) brightness(0.5);
    transform: scale(1.2);
 
}

.slides {
    display: flex;
    height: 100%;
    transition: transform 0.5s ease-in-out;
}

.slide {
    flex: 0 0 100%;
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;

    filter: drop-shadow(0px 0px 20px #000000);
}

.dots {
    position: absolute;
    bottom: 20px;
    width: 100%;
    display: flex;
    justify-content: center;
    gap: 10px;
}

.dot {
    height: 12px;
    width: 12px;
    border-radius: 50%;
    background-color: rgba(255, 255, 255, 0.5);
    cursor: pointer;
}

.dot.active {
    background-color: white;
}

